--- a/index.html
+++ b/index.html
@@ -1,68 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	  <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no">
 	
     <title>Welcome to Facebook</title>
 </head>
 <body>
+   <div class="header">
      <div class="row">
-	  <div class="col-lg-6">
-	    <div class="input-group">
-		<span class="input-group-addon">
-	        </tab>
-	      </span>
-	      <span class="input-group-addon">
-	        logo
-	      </span>
-	      <input type="text" class="form-control" aria-label="..." size="40" placeholder="Search Facebook">
-		<span class="input-group-addon">
-	        profile
-	      </span>
-		<span class="input-group-addon">
-	        home
-	      </span>
-		<span class="input-group-addon">
-	        requests
-	      </span>
-		<span class="input-group-addon">
-	        Messages
-	      </span>
-		<span class="input-group-addon">
-	        Notifications
-	      </span>
-		<span class="input-group-addon">
-	        Settings
-	      </span>
-	    </div><!-- /input-group -->
-	  </div><!-- /.col-lg-6 -->
+	   <div class="col-lg-6">
+	        <div class="input-group">
+	        	<span class="input-group-addon">
+	        		logo
+	      		</span>
+	      		<input id="search" type="text" class="form-control" size="40" placeholder="Search Facebook">
+				<span class="input-group-addon">
+	        		profile
+	      		</span>
+				<span class="input-group-addon">
+	        		home
+	      		</span>
+				<span class="input-group-addon">
+	        		requests
+	      		</span>
+				<span class="input-group-addon">
+	        		Messages
+	      		</span>
+				<span class="input-group-addon">
+	        		Notifications
+	      		</span>
+				<span class="input-group-addon">
+	        		Settings
+	      		</span>
+	    	</div><!-- /input-group -->
+	  	</div><!-- /.col-lg-6 -->
      </div>
-<div class="row">
-  <div class="col-lg-4">
-    <div class="input-group">
-      <span class="input-group-addon">
-        <input type="checkbox" aria-label="...">
-      </span>
-      <input type="text" class="form-control" aria-label="...">
-    </div><!-- /input-group -->
-  </div><!-- /.col-lg-4 -->
-  <div class="col-lg-4">
-    <div class="input-group">
-      <span class="input-group-addon">
-        <input type="radio" aria-label="...">
-      </span>
-      <input type="text" class="form-control" aria-label="...">
-    </div><!-- /input-group -->
-  </div><!-- /.col-lg-4 -->
-    <div class="col-lg-4">
-    <div class="input-group">
-      <span class="input-group-addon">
-        <input type="radio" aria-label="...">
-      </span>
-      <input type="text" class="form-control" aria-label="...">
-    </div><!-- /input-group -->
-  </div><!-- /.col-lg-4 -->
-</div><!-- /.row -->
+   </div>
+	<div class="row">
+	  <div class="col-md-4">First column</div>   
+	  <div class="col-md-4">Second column</div>
+	  <div class="col-md-4">Third column</div>
+	</div>
 </body>
 </html>
