Facebook header and structure

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	  <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no">
 	
@@ -10,38 +10,72 @@
 <body>
    <div class="header">
      <div class="row">
-	   <div class="col-lg-6">
-	        <div class="input-group">
-	        	<span class="input-group-addon">
-	        		logo
-	      		</span>
-	      		<input id="search" type="text" class="form-control" size="40" placeholder="Search Facebook">
-				<span class="input-group-addon">
-	        		profile
-	      		</span>
-				<span class="input-group-addon">
-	        		home
-	      		</span>
-				<span class="input-group-addon">
-	        		requests
-	      		</span>
-				<span class="input-group-addon">
-	        		Messages
-	      		</span>
-				<span class="input-group-addon">
-	        		Notifications
-	      		</span>
-				<span class="input-group-addon">
-	        		Settings
-	      		</span>
-	    	</div><!-- /input-group -->
-	  	</div><!-- /.col-lg-6 -->
-     </div>
+     	<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 font-color-default">
+     		<span>
+     			logo
+     		</span>
+     	</div>
+     	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+		   	<div class="input-group">
+		   		<input id="search" type="text" class="form-control" size="40" placeholder="Search Facebook">
+		   		<span class="input-group-btn">
+		       		<button class="btn " height="35px" type="button">Search</button>
+		   		</span>
+		   	</div><!-- /input-group -->
+		</div><!-- /.col-lg-4 -->
+		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 font-color-default">
+     		<span>
+     			pic
+     		</span>
+     	</div>
+     	<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 font-color-default">
+     		<span>
+     			profile
+     		</span>
+     	</div>
+     	<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 font-color-default">
+     		<span>
+     			Home
+     		</span>
+     	</div>
+     	<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 font-color-default">
+     		<span>
+     			Requests
+     		</span>
+     	</div>
+     	<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 font-color-default">
+     		<span>
+     			Messages
+     		</span>
+     	</div>
+     	<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 font-color-default">
+     		<span>
+     			Notifications
+     		</span>
+     	</div>
+     	<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 font-color-default">
+     		<span>
+     			Settings
+     		</span>
+     	</div>
+     </div><!-- /.row -->
    </div>
 	<div class="row">
-	  <div class="col-md-4">First column</div>   
-	  <div class="col-md-4">Second column</div>
-	  <div class="col-md-4">Third column</div>
+	  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+	  	<span>
+	  		First Column
+	  	</span>
+	  </div>   
+	  <div class="col-lg-5 col-md-5 col-sm-6 col-xs-6">
+	  	<span>
+	  		Second column		
+	  	</span>
+	  </div>
+	  <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4">
+	  	<span>
+	  		Third column
+	  	</span>	  	
+	  </div>
 	</div>
 </body>
 </html>
