--- a/index.html
+++ b/index.html
@@ -1239,7 +1239,7 @@
 			    <div class="list-group-item">
 			    	<div class="row">
 			    		<div class=".col-md-2">
-			    			<img src="image/sravan.jpg" width="70px" height="70px" style="float:left">
+			    			<img src="image/aswin.jpg" width="70px" height="70px" style="float:left">
 			    		</div>
 			    		<div class=".col-md-6">
 			    			<ul>
